# NewsJuice

./: .gitignore  Chatter_retriever_tts_log.txt  LOCAL_SETUP_GUIDE.md  Makefile  MakefileBatch  MakefileChatter  MakefileLoader_New  MakefileScraper  README.md  README_Changes_MS_4  README_Changes_MS_4.md  README_Repository_Organization.md  README_changes_MS3.md  README_data_versioning.md  README_general.md  Scraper Loader Log.txt  TEAM_WALKTHROUGH.md  TTS-Chatter-Retriever.txt  WORKFLOW.md  ask_news.sh  docker-compose.yml  preferences-prototype.html
.github/workflows/: ci-unit_only_loader.yaml  ci.yaml  ci_combined.yaml  ci_full.yaml  ci_loader.yaml  ci_parallel.yaml  ci_scraper.yaml
Archive/: MakefileBatch  MakefileChatter  MakefileLoader_New  MakefileScraper  README.md  docker-compose.yml
Archive/scraper/: .coverage  (+6 more)
Finetuning/: 1_finetuning-for-podcast-Generate-Data.ipynb  2_finetune-for-podcast-pipeline.ipynb  3_finetune-for-podcast-predictions.ipynb  Classification-pipeline.ipynb  README.md
artifacts/: news.jsonl  top-2.txt
services/: .coverage  combined_unit_test.sh
services/chatter/: Dockerfile  README.md  chatter.py  pyproject.toml
services/chatter_deployed/: .coverage  .dockerignore  .env.local  .flake8  DEPLOYMENT.md  Dockerfile  README.md  README_chatter_deployed.md  README_develop_vs_deploy.md  chatter_handler.py  cloudbuild.yaml  docker-compose.local.yml  env.local.docx  env.yaml  firebase_auth.py  gcs_storage.py  helpers.py  init-db.sql  live_api_client.py  live_api_tts_client.py  main.py  package-lock.json  pyproject.toml  pytest.ini  query_enhancement.py  query_enhancement.txt  retriever.py  retriever_OLD.py  speech_to_text_client.py  text_to_speech_client.py  user_db.py
services/chatter_deployed/migrations/: 001_add_source_chunks_column.sql  README.md
services/chatter_deployed/tests/: __init__.py  test_placeholder.py
services/data_versioner/: README_data_versioning.md  data.dvc  main.py  pyproject.toml
services/data_versioner/.dvc/: config
services/data_versioner/data/exports/: .gitignore  db_export_20251120_144727.sql.dvc
services/data_versioner/scripts/data_versioning/: version_data.py
services/deployment/: Dockerfile  KUB_LOADER_WORKS__main__.py  Pulumi.dev.yaml  Pulumi.dev1.yaml  Pulumi.yaml  README_Deployment_Guide.md  README_Scaling  README_Scaling.md  __main__.py  __main__WORKING.py  check-deployment.sh  docker-entrypoint.sh  docker-shell.sh  docker_config.json  enable-gke.sh  pyproject.toml
services/finetunning/: finetuning.py  generate_dataset.py  merge_model.py  podcast_results.csv  pyproject.toml  run_predictions.py
services/loader_testing/: .coverage  .dockerignore  .flake8  .gitignore  .pre-commit-config copia.yaml  Dockerfile  Dockerfile.dev  Dockerfile.prod  README.md  README_dataversioning.md  README_loader.md  README_testing_loader.md  analyze_usage.sh  cloudbuild.yaml  deploy.sh  docker-compose.local.yml  docker-compose.test-ci.yml  docker-compose.test.yml  docker-entrypoint.sh  docker-shell.sh  env.yaml  pyproject.toml  pytest.ini  test-deployed-loader.sh
services/loader_testing/.github/workflows/: ci-hybrid.yaml  system-tests.yaml
services/loader_testing/OLD /: .gitignore copia  .pre-commit-config.yaml  Dockerfile_OLD  INTEGRATION_TEST_LONG.py  ci.yaml  loader_WORKS.py  pyproject_OLD.toml  wait_for_db.py
services/loader_testing/OLD /NEW_.github/workflows/: ci.yml
services/loader_testing/src/api-service/api/: __init__.py  loader.py  main.py
services/loader_testing/tests/integration/: test_api_simple.py
services/loader_testing/tests/setup/: init_test_db.sql
services/loader_testing/tests/system/: test_loader_system.py
services/loader_testing/tests/unit/: test_article_processing_and_orchestrator.py  test_database_manager.py  test_main_api.py  test_utils.py
services/retriever/: Dockerfile  pyproject.toml  retriever.py  server.py
services/scraper_deployed/: .coverage  .flake8  Dockerfile  README_scraper_deployed.md  article_tags_builder.py  crimson_scraper.py  db_manager.py  deploy.sh  docker-compose.local.yml  env.yaml  gazette_scraper.py  gsas_scraper.py  harvard_magazine_scraper.py  hbs_scraper.py  hks_scraper.py  hls_scraper.py  hms_scraper.py  main.py  pyproject.toml  pytest.ini  scrapers.py  seas_scraper.py  set-scheduler.sh  testname
services/scraper_deployed/Auto Scraper/: requirements.txt
services/scraper_deployed/Auto Scraper/analyst/: agent.py
services/scraper_deployed/Auto Scraper/coder/: __init__.py  agent.py
services/scraper_deployed/Auto Scraper/orchestrator/: __init__.py
services/scraper_deployed/Auto Scraper/shared/: __init__.py  tools.py
services/scraper_deployed/Auto Scraper/validator/: __init__.py  agent.py
services/scraper_deployed/test/: test_crimson_scraper.py  test_db_manager.py  test_gazette_scraper.py  test_gsas_scraper.py  test_harvard_magazine_scraper.py  test_hbs_scraper.py  test_hks_scraper.py  test_hls_scraper.py  test_hms_scraper.py  test_seas_scraper.py
services/scraper_deployed/test/Saved_pages/: GSAS_sample_article.html  Gazette_sample_article.html  HLS_sample_topic_page.html  save_pages.py
services/scraper_deployed/test/Saved_pages/GSAS_sample_article_files/: css_dhWS2-hXawZYo3QUGMBCd7daNgURB_oHSKyvRBAv26M.css  index.b2d03234.css  js_GXxSrNOUCPa-DPzRW0hz4FUQXBXd-NEZndxnOOj7pog.js.download
services/tts/: Dockerfile  pyproject.toml  tts.py  wait_for_db.py
(+200 files in other folders)
