[project]
name = "chatter-service"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "psycopg[binary]>=3.2.1",
  "google-cloud-aiplatform>=1.38.0",
  "google-cloud-texttospeech>=2.16.0",
  "google-auth>=2.23.0",
  "python-dotenv>=1.0.0",
  "sentence-transformers>=5.1.1",
  "pgvector>=0.4.1",
]
