[project]
name = "data-versioner"
version = "0.1.0"
description = "Data versioning with DVC"
requires-python = ">=3.11"
dependencies = [
    "dvc>=3.64.0",
    "dvc-gs>=3.0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/data_versioner"]
