[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "kubernetes>=34.1.0",
    "pandas>=2.3.3",
    "pulumi>=3.204.0",
    "pulumi-command>=1.1.3",
    "pulumi-docker>=4.9.0",
    "pulumi-docker-build>=0.0.15",
    "pulumi-gcp>=9.3.0",
    "pulumi-kubernetes>=4.23.0",
    "python-dotenv>=1.2.1",
    "rich>=14.2.0",
]
