[project]
name = "minimal-rag-ingest"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "datasets",
  "peft",
  "transformers==4.56.1",
  "tokenizers==0.22.0",
  "huggingface-hub==0.35.0",
  "bitsandbytes==0.46.1",
  "trl==0.23.0",
  "google-genai>=1.43.0",
  "google-cloud-aiplatform>=1.38.0",
  "google-auth>=2.23.0",
  "psycopg",
  "pgvector",
  "psycopg[binary]>=3.2.1",
  "pgvector>=0.4.1",
]
