[project]
name = "minimal-rag-ingest"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "feedparser>=6.0.10",
  "httpx>=0.27.0",
  "python-dateutil>=2.9.0",
  "trafilatura>=1.9.0",
  "tqdm>=4.66.4",
  "beautifulsoup4>=4.12.2", 
  "playwright>=1.42.0",
  "psycopg[binary]>=3.2.10",
  "google-cloud-aiplatform",
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
  "black==24.1.1",
  "flake8>=7.0.0",
  "pytest>=7.4.4",
  "pytest-cov>=4.1.0",
]

[tool.black]
line-length = 120
target-version = ["py311", "py312"]
