[project]
name = "newsjuice-tts"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "google-cloud-texttospeech>=2.16.0",
  "google-auth>=2.23.0",
  "psycopg[binary]>=3.2.10"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
